Fixed alignment using flex

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,74 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display:flex;
+  flex-direction:column;
+  flex-basis:auto;
 }
 
 .header {
+  display:flex;
+  align-items:center;
   height: 72px;
   background: darkmagenta;
-  color: white;
+}
+
+.header p {
+  font-weight:900;
+  font-size:32px;
+  margin-left:16px;
+  color:white;
+}
+
+
+.mainflex {
+  flex:1 1 auto;
+  display:flex;
+  justify-content:space-between;
+  align-items:stretch;
 }
 
 .footer {
+  display:flex;
+  justify-content:center;
+  align-items:center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  margin-top:0;
 }
 
 .sidebar {
+  flex: 1 0 auto;
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  padding:16px;
+}
+
+ul {
+  list-style-type:none;
+  padding:16px;
+  margin:0;
+}
+
+a {
+  text-decoration:none;
+  color:white;
+  font-size:24px;
+}
+
+.container {
+  display:flex;
+  justify-content:flex-start;
+  flex-wrap:wrap;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  padding:32px;
+  width:240px;
+  margin:8px;
 }
